<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_frame"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_frame_height">

    <LinearLayout
        android:id="@+id/layout_item_parent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/layout_item_parent_marginRight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTop"
            android:layout_width="@dimen/tv_top_width"
            android:layout_height="match_parent"
            android:background="#c0c0c0"
            android:gravity="center"
            android:text="@string/tv_top"
            android:textColor="@color/textView_textColor"
            android:textSize="@dimen/textView_itemSize" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="@dimen/tv_delete_width"
            android:layout_height="match_parent"
            android:background="#ff00"
            android:gravity="center"
            android:text="@string/tv_delete"
            android:textColor="@color/textView_textColor"
            android:textSize="@dimen/textView_itemSize" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/musicItem_playing_v"
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_marginLeft="@dimen/view_margin_left"
            android:layout_marginTop="@dimen/view_margin_top"
            android:background="@color/redIsPlaying"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/musicItem_album_iv"
            android:layout_width="@dimen/iv_album_width"
            android:layout_height="@dimen/iv_album_height"
            android:layout_marginLeft="@dimen/iv_album_margin_left"
            android:layout_marginTop="@dimen/iv_album_margin_top"
            android:src="@drawable/qq_music" />

        <TextView
            android:id="@+id/musicItem_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_title_height"
            android:layout_marginLeft="@dimen/tv_title_margin_left"
            android:layout_marginTop="@dimen/tv_title_margin_top"
            android:layout_toLeftOf="@+id/iv_share"
            android:layout_toRightOf="@+id/musicItem_album_iv"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/tv_title"
            android:textSize="@dimen/tv_title_size" />

        <TextView
            android:id="@+id/musicItem_artist_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_artist_height"
            android:layout_below="@+id/musicItem_title_tv"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/iv_artist_margin_left"
            android:layout_marginTop="@dimen/iv_artist_margin_top"
            android:layout_toRightOf="@+id/musicItem_album_iv"
            android:text="@string/tv_artist" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="@dimen/iv_share_height"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/iv_share_margin_right"
            android:src="@drawable/ic_music_list_icon_more" />
    </RelativeLayout>

</FrameLayout>